--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <title>Pixel Art Maker!</title>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Megrim" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Lab: Pixel Art Maker</h1>
 
     <h2>Choose Grid Size</h2>
-    <form id="sizePicker" onsubmit="return validateForm()">
+    <form id="sizePicker">
         Grid Height:
         <input type="number" id="input_height" name="height" min="1" value="1">
         Grid Width:
         <input type="number" id="input_width" name="width" min="1" value="1">
-        <input type="submit" value="create grid" id="submit">
+        <input type="submit" value="create grid">
     </form>
 
     <!-- create div, <table>, <tr> & <td> element? -->
@@ -25,6 +25,12 @@
     <h2>Design Canvas</h2>
     <table id="pixel_canvas">
     </table>
+    <script
+        src="https://code.jquery.com/jquery-3.2.1.slim.js"
+        integrity="sha256-tA8y0XqiwnpwmOIl3SGAcFl2RvxHjA8qp0+1uCGmRmg="
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/designs.js"></script>
+
 </body>
 
 </html>
